# sir

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  appveyor.yml
.github/workflows/: build.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: lib.rs  main.rs  workbook.rs
src/preferences/: mod.rs
