cargo-features = ["strip"]

[package]
name = "sir"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.
strip = "debuginfo"
codegen-units = 1

[dependencies]
calamine = "0.16.1"
anyhow = "1.0"
iced = "0.1"
shellexpand = "2.0.0"
csv = "1.1.3"
